--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>{{page_title}}</title>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://pagecdn.io/lib/tailwindcss/1.6.2/tailwind.min.css">
 </head>
 <body>
 <br><br><br><br>
