--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,10 @@
 
   {% block content %}
 
-<div id="login">
-        <h1>Login</h1>
+<div id="login" class="container mx-auto h-full flex justify-center items-center">
+ <div class="w-1/3">
+        <h1 class="font-hairline mb-6 text-center text-2xl">Login</h1>
+        <div class="border-blue-600 p-8 border-t-12 bg-white mb-6 rounded-lg shadow-lg">
         <form method="POST">
         {% csrf_token %}
            {% if form.errors %}
@@ -15,26 +17,16 @@
            {% endfor %}
        {% endfor %}
     {% endif %}
-        <input type="text" name="username" v-model="input.username" placeholder="Email" />
-        
-        <input type="password" name="password" v-model="input.password" placeholder="Password" />
-      
-        <button type="submit" v-on:click="">Login</button>
+        <input class="block appearance-none w-full bg-white border border-grey-light hover:border-grey px-2 py-2 rounded shadow" type="text" name="username" v-model="input.username" placeholder="Email" />
+        <br>
+        <input class="block appearance-none w-full bg-white border border-grey-light hover:border-grey px-2 py-2 rounded shadow" type="password" name="password" v-model="input.password" placeholder="Password" />
+      <br>
+        <button class="bg-blue-600 hover:bg-blue-800 text-white font-bold py-2 px-4 rounded" type="submit" v-on:click="">Login</button>
         <br><br>
-        <button>Don't have account? <a href="{% url 'register' %}">Create Account</a></button>
+        <p class="text-grey-dark text-sm">Don't have account? <a href="{% url 'register' %}" class="no-underline text-blue-600 font-bold"> Create Account</a></p>
         </form>
-        
+        </div>
+    </div>    
 </div>
 
-<style scoped>
-    #login {
-        width: 500px;
-        border: 1px solid #CCCCCC;
-        background-color: #FFFFFF;
-        margin: auto;
-        margin-top: 200px;
-        padding: 20px;
-        text-align: center;
-    }
-</style>
 {% endblock %}
