--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,34 +1,21 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ user.username }} - Profile</title>
-</head>
-<body>
-<br><br><br><br>
-<div class="container">
-<h1 class="bg-dark">Profile</h1>
- <!-- message here -->
+{% extends 'base.html' %}
 
-  {% if messages %}
-  {% for message in messages %}
-      <small {% if message.tags %} class="{{message.tags}}" {% endif %}>{{message}}</small>
-  {% endfor %}
-  {% endif %}
+  {% block content %}
 
-{% if user.is_authenticated %}
-{{ user.email }} <br>
-{{ user.username }}
+<div id="login" class="container mx-auto h-full flex justify-center items-center">
+ <div class="w-1/3">
+        <h1 class="font-hairline mb-6 text-center text-2xl">Profile</h1>
+        <div class="border-blue-600 p-8 border-t-12 bg-white mb-6 rounded-lg shadow-lg">
+        {% if user.is_authenticated %}
+        {{ user.email }} <br>
+        {{ user.username }}
     <br><br>
-    <a href="{% url 'logout' %}"><button class="btn btn-danger btn-lg">Logout</button></a>
+    <a href="{% url 'logout' %}" ><button class="bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 rounded">Logout</button></a>
 {% else %}
-    <a href="{% url 'login' %}">Login</a>
-    <br><br>
-    <br><br>
-    <a href="{% url 'signup' %}">Sign Up</a>
+   <h1>Invalid Access.</h1>
     {% endif %}
-<br><br>
+        </div>
+    </div>    
 </div>
-</body>
-</html>
+
+{% endblock %}
