fixed cdn link of tailwindcss

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,32 +1,43 @@
 <html>
   <head>
-     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>{{page_title}}</title>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
     <script src="https://unpkg.com/vue-router@2.0.0"></script>
-    <link rel="stylesheet" type="text/css" href="https://pagecdn.io/lib/tailwindcss/1.6.2/tailwind.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    {% block content %}
-
-{% endblock %} 
+    {% block content %} {% endblock %}
   </body>
 </html>
 
-{% comment %} <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+{% comment %}
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>{{page_title}}</title>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://pagecdn.io/lib/tailwindcss/1.6.2/tailwind.min.css">
-</head> {% endcomment %}
-
-
+  <title>{{page_title}}</title>
+  <script src="https://unpkg.com/vue"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="https://pagecdn.io/lib/tailwindcss/1.6.2/tailwind.min.css"
+  />
+</head>
+{% endcomment %}
